@@ -1,4 +1,4 @@
 DIST gkrellflynn-0.8.tar.gz 26722 RMD160 f35eeacd8121bd52c53a5610199211f7c34c790c SHA1 8fc8ab477572ca8a858d19d5903f9a2b7c3b2d31 SHA256 377c8581c15e83948687cc22c0ddee208c65195687df68dd05e73bafa7e68659
-EBUILD gkrellflynn-0.8.ebuild 540 RMD160 6aaa0e18e5f12a2c24f6d730ab39a72c1045b11c SHA1 6c108b450ddc3b11997c54505e67ade6a48bccf7 SHA256 0dbd6b2dd08c7277573f4d8fbb42d49164519bb7998d831ccd36efc6f141424d
-MISC ChangeLog 2859 RMD160 19f93d51854739ca628fd34ee8f886876f76ec8a SHA1 604ee39fe3bf9b3167cadbe8aba1731ec2e356c9 SHA256 9ea7e5ca43ff53012b376e4bd58cfd798f7ac508e15a7a6a264483c8d198ef0d
+EBUILD gkrellflynn-0.8.ebuild 561 RMD160 eae3f24c5db67c82acac4222ccaaca5cb4172d29 SHA1 717ee5f50572cfe9eacf4e6d65800348b4c27be0 SHA256 6b770a0cb1ced36ca8d88009fd8f2655d32e371087d6ab6b423ececce8b4fc75
+MISC ChangeLog 2965 RMD160 4ac4edb3240cdf0317c03de1527637e1c0639aa2 SHA1 379e31112ffabc8ca9e032ffbfaacdd4efdf200d SHA256 4b866d6005428891a5d678e945c81ee2119b59a92a41a39a79727e57b6bc8552
 MISC metadata.xml 254 RMD160 415926d9875e8fe9b0d03e74435ad2521fac159c SHA1 172a4c3880766b1bb7e75f4f2b4ed0b62c1d2d6c SHA256 dafc7e6c5cb681b9d6ecbe2ff4280bb987d3533c30bb334b4845faee02aa7279
