@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/gkrellflynn
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellflynn/ChangeLog,v 1.24 2007/06/12 20:58:35 lack Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/gkrellflynn/ChangeLog,v 1.25 2008/11/18 14:06:53 lack Exp $
+
+  18 Nov 2008; Jim Ramsay <lack@gentoo.org> gkrellflynn-0.8.ebuild:
+  Updated dead HOMEPAGE (Bug 214631)
 
   12 Jun 2007; Jim Ramsay <lack@gentoo.org> -gkrellflynn-0.6.ebuild,
   -gkrellflynn-0.7.ebuild:
